--- a/src/CSS/guixeDesign.css
+++ b/src/CSS/guixeDesign.css
@@ -16,3 +16,53 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
 .bg-white:hover{
      -fx-effect: dropshadow(three-pass-box, rgba(0, 0, 0, .5), 8, 0, 0, 0);
 }
+
+.table-view{
+    -fx-background-color: #fff;
+    -fx-background-radius:10px;
+    -fx-border-color:#ae2d3c;
+    -fx-border-radius:10px;
+    -fx-text-fill:#fff;
+}
+
+.table-view .column-header-background{
+    -fx-background-color: linear-gradient(to top left, #1e242e, #ae2d3c);
+    -fx-background-insets: 0 0 0 0;
+    -fx-background-radius: 10px 10px 0px 0px;
+}
+
+.table-view .column-header, table-view .filler{
+    -fx-background-color: transparent;
+    -fx-size: 50px;
+    -fx-fill: #fff;
+}
+
+.table-view .column-header .label{
+    -fx-text-fill:#fff;
+}
+
+.add-textfield{
+    -fx-background-color:#fff;
+    -fx-background-radius: 0px 5px 0px 0px;
+    -fx-border-color:#1e242e;
+    -fx-border-width:.8px;
+    -fx-border-radius:0px 5px 0px 0px;
+    -fx-font-size:13px;
+}
+
+.add-textfield:focused{
+    -fx-border-color:#ae2d3c;
+    -fx-border-width:1.5px;
+}
+
+.Btn-btn{
+    -fx-background-color:#3149a1;
+    -fx-background-radius:8px;
+    -fx-text-fill:#fff;
+    -fx-font-size:14px;
+    -fx-cursor:hand;
+}
+.Btn-btn:hover{
+    -fx-background-color:#3c71c4;
+}
+
