--- a/src/FXML/FXMLDocument.fxml
+++ b/src/FXML/FXMLDocument.fxml
@@ -2,6 +2,7 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -31,13 +32,13 @@
             </Label>
             <TextField fx:id="signin_username" layoutX="207.0" layoutY="200.0" prefHeight="26.0" prefWidth="170.0" promptText="Username" styleClass="textfield" stylesheets="@../CSS/LoginDesign.css" />
             <PasswordField fx:id="signin_password" layoutX="207.0" layoutY="241.0" prefHeight="26.0" prefWidth="170.0" promptText="Password" styleClass="textfield" stylesheets="@../CSS/LoginDesign.css" />
-            <Button fx:id="signin_loginBtn" layoutX="268.0" layoutY="315.0" mnemonicParsing="false" onAction="#signin" prefHeight="26.0" prefWidth="62.0" styleClass="login-btn" stylesheets="@../CSS/LoginDesign.css" text="Login">
+            <Button fx:id="signin_loginBtn" layoutX="259.0" layoutY="313.0" mnemonicParsing="false" onAction="#signin" prefHeight="30.0" prefWidth="82.0" styleClass="login-btn" stylesheets="@../CSS/LoginDesign.css" text="Login">
                <font>
                   <Font size="16.0" />
                </font>
             </Button>
             <Hyperlink fx:id="signin_createAcc" layoutX="244.0" layoutY="363.0" onAction="#switchForm" stylesheets="@../CSS/LoginDesign.css" text="Create new Account" />
-            <Hyperlink fx:id="forgotPassword" layoutX="250.0" layoutY="279.0" onAction="#switchForm" stylesheets="@../CSS/LoginDesign.css" text="Forget Password?" />
+            <Hyperlink fx:id="forgotPassword" layoutX="207.0" layoutY="280.0" onAction="#switchForm" stylesheets="@../CSS/LoginDesign.css" text="Forget Password?" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="signup_form" prefHeight="400.0" prefWidth="600.0" styleClass="bg-form" stylesheets="@../CSS/LoginDesign.css" visible="false">
@@ -52,7 +53,7 @@
                   <FontAwesomeIcon fill="WHITE" glyphName="MINUS" />
                </graphic>
             </Button>
-            <FontAwesomeIcon fill="#b43d3d" glyphName="USER_PLUS" layoutX="245.0" layoutY="134.0" size="8em" />
+            <FontAwesomeIcon fill="#b43d3d" glyphName="USER_PLUS" layoutX="237.0" layoutY="119.0" size="8em" />
             <Label layoutX="251.0" layoutY="149.0" text="Sign Up" textFill="WHITE">
                <font>
                   <Font name="Berlin Sans FB" size="30.0" />
@@ -60,13 +61,14 @@
             </Label>
             <TextField fx:id="signup_username" layoutX="207.0" layoutY="200.0" prefHeight="26.0" prefWidth="170.0" promptText="Username" styleClass="textfield" stylesheets="@../CSS/LoginDesign.css" AnchorPane.topAnchor="200.0" />
             <PasswordField fx:id="signup_password" layoutX="207.0" layoutY="241.0" prefHeight="26.0" prefWidth="170.0" promptText="Password" styleClass="textfield" stylesheets="@../CSS/LoginDesign.css" AnchorPane.topAnchor="241.0" />
-            <Button fx:id="signup_Btn" layoutX="253.0" layoutY="322.0" mnemonicParsing="false" onAction="#signup" prefHeight="30.0" prefWidth="75.0" styleClass="signup-btn" stylesheets="@../CSS/LoginDesign.css" text="SignUp">
+            <Button fx:id="signup_Btn" layoutX="299.0" layoutY="322.0" mnemonicParsing="false" onAction="#signup" prefHeight="30.0" prefWidth="75.0" styleClass="signup-btn" stylesheets="@../CSS/LoginDesign.css" text="SignUp">
                <font>
                   <Font size="16.0" />
                </font>
             </Button>
             <Hyperlink fx:id="signup_alreadyAcc" layoutX="220.0" layoutY="363.0" onAction="#switchForm" stylesheets="@../CSS/LoginDesign.css" text="Already have an Account?" />
             <TextField fx:id="signup_email" layoutX="206.0" layoutY="283.0" prefHeight="26.0" prefWidth="170.0" promptText="Email Address" styleClass="textfield" stylesheets="@../CSS/LoginDesign.css" AnchorPane.topAnchor="282.0" />
+            <ChoiceBox fx:id="role" layoutX="206.0" layoutY="324.0" prefHeight="26.0" prefWidth="75.0" styleClass="textfield" stylesheets="@../CSS/LoginDesign.css" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="forgot_form" prefHeight="400.0" prefWidth="600.0" styleClass="bg-form" stylesheets="@../CSS/LoginDesign.css" visible="false">
