--- a/src/FXML/dashboard.fxml
+++ b/src/FXML/dashboard.fxml
@@ -3,77 +3,76 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" fx:id="dashboard_view" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.dashboardController">
+<AnchorPane id="AnchorPane" fx:id="dashboard_view" prefHeight="600.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.dashboardController">
    <children>
-      <BorderPane prefHeight="600.0" prefWidth="1100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <top>
-            <AnchorPane prefHeight="40.0" prefWidth="1100.0" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="601.0" prefWidth="246.0" styleClass="top-form" stylesheets="@../CSS/dashboardDesign.css" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="504.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <AnchorPane prefHeight="601.0" prefWidth="200.0" styleClass="nav-form" stylesheets="@../CSS/dashboardDesign.css">
                <children>
-                  <AnchorPane layoutX="182.0" layoutY="-74.0" prefHeight="30.0" prefWidth="1100.0" styleClass="top-form" stylesheets="@../CSS/dashboardDesign.css" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                     <children>
-                        <Button fx:id="close" layoutX="1072.0" mnemonicParsing="false" onAction="#close" prefHeight="24.0" prefWidth="36.0" styleClass="close" stylesheets="@../CSS/dashboardDesign.css">
-                           <graphic>
-                              <FontAwesomeIcon glyphName="CLOSE" />
-                           </graphic>
-                        </Button>
-                        <Button fx:id="minimize" layoutX="1036.0" mnemonicParsing="false" onAction="#minimize" prefHeight="24.0" prefWidth="36.0" styleClass="minimize" stylesheets="@../CSS/dashboardDesign.css">
-                           <graphic>
-                              <FontAwesomeIcon glyphName="MINUS" />
-                           </graphic>
-                        </Button>
-                        <Label layoutX="14.0" layoutY="6.0" text="BlueMoon Apartment Management System">
-                           <font>
-                              <Font name="Microsoft Sans Serif" size="12.0" />
-                           </font>
-                        </Label>
-                     </children>
-                  </AnchorPane>
-               </children>
-            </AnchorPane>
-         </top>
-         <left>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" styleClass="nav-form" stylesheets="@../CSS/dashboardDesign.css" BorderPane.alignment="CENTER">
-               <children>
-                  <FontAwesomeIcon glyphName="USER" layoutX="62.0" layoutY="82.0" size="8em" />
-                  <Label layoutX="62.0" layoutY="96.0" text="Welcome" textFill="WHITE">
+                  <FontAwesomeIcon glyphName="USER" layoutX="62.0" layoutY="143.0" size="8em" />
+                  <Label layoutX="62.0" layoutY="157.0" text="Welcome" textFill="WHITE">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <Label alignment="CENTER" layoutX="17.0" layoutY="123.0" prefHeight="25.0" prefWidth="164.0" text="Label" textFill="WHITE">
+                  <Label fx:id="user" alignment="CENTER" layoutX="17.0" layoutY="184.0" prefHeight="25.0" prefWidth="164.0" text="Label" textFill="WHITE">
                      <font>
                         <Font name="Microsoft Sans Serif" size="25.0" />
                      </font>
                   </Label>
-                  <Button fx:id="nhankhauBtn" alignment="CENTER" layoutX="11.0" layoutY="200.0" mnemonicParsing="false" onAction="#changePage" prefHeight="35.0" prefWidth="175.0" styleClass="nav-btn" stylesheets="@../CSS/dashboardDesign.css" text="Nhân Khẩu" textAlignment="CENTER" />
-                  <Button fx:id="hokhauBtn" layoutX="11.0" layoutY="235.0" mnemonicParsing="false" onAction="#changePage" prefHeight="35.0" prefWidth="175.0" styleClass="nav-btn" stylesheets="@../CSS/dashboardDesign.css" text="Hộ Khẩu" />
-                  <Button fx:id="khoanthuBtn" layoutX="11.0" layoutY="270.0" mnemonicParsing="false" onAction="#changePage" prefHeight="35.0" prefWidth="175.0" styleClass="nav-btn" stylesheets="@../CSS/dashboardDesign.css" text="Khoan Thu" />
-                  <Button fx:id="traphiBtn" layoutX="11.0" layoutY="305.0" mnemonicParsing="false" onAction="#changePage" prefHeight="35.0" prefWidth="175.0" styleClass="nav-btn" stylesheets="@../CSS/dashboardDesign.css" text="Trả phí" />
-                  <Button fx:id="guixeBtn" layoutX="11.0" layoutY="340.0" mnemonicParsing="false" onAction="#changePage" prefHeight="35.0" prefWidth="175.0" styleClass="nav-btn" stylesheets="@../CSS/dashboardDesign.css" text="Gửi xe" />
-                  <Button fx:id="signout" layoutX="11.0" layoutY="518.0" mnemonicParsing="false" onAction="#signout" styleClass="signout" stylesheets="@../CSS/dashboardDesign.css">
+                  <Button fx:id="nhankhauBtn" alignment="CENTER" layoutX="11.0" layoutY="257.0" mnemonicParsing="false" onAction="#changePage" prefHeight="35.0" prefWidth="175.0" styleClass="nav-btn" stylesheets="@../CSS/dashboardDesign.css" text="Nhân Khẩu" textAlignment="CENTER" />
+                  <Button fx:id="hokhauBtn" layoutX="11.0" layoutY="292.0" mnemonicParsing="false" onAction="#changePage" prefHeight="35.0" prefWidth="175.0" styleClass="nav-btn" stylesheets="@../CSS/dashboardDesign.css" text="Hộ Khẩu" />
+                  <Button fx:id="khoanthuBtn" layoutX="11.0" layoutY="327.0" mnemonicParsing="false" onAction="#changePage" prefHeight="35.0" prefWidth="175.0" styleClass="nav-btn" stylesheets="@../CSS/dashboardDesign.css" text="Khoan Thu" />
+                  <Button fx:id="traphiBtn" layoutX="11.0" layoutY="362.0" mnemonicParsing="false" onAction="#changePage" prefHeight="35.0" prefWidth="175.0" styleClass="nav-btn" stylesheets="@../CSS/dashboardDesign.css" text="Trả phí" />
+                  <Button fx:id="guixeBtn" layoutX="11.0" layoutY="397.0" mnemonicParsing="false" onAction="#changePage" prefHeight="35.0" prefWidth="175.0" styleClass="nav-btn" stylesheets="@../CSS/dashboardDesign.css" text="Gửi xe" />
+                  <Button fx:id="signout" layoutX="14.0" layoutY="528.0" mnemonicParsing="false" onAction="#signout" styleClass="signout" stylesheets="@../CSS/dashboardDesign.css">
                      <graphic>
                         <FontAwesomeIcon fill="WHITE" glyphName="SIGN_OUT" size="1.6em" />
                      </graphic>
                   </Button>
-                  <Label layoutX="55.0" layoutY="521.0" text="Sign Out" textFill="WHITE">
+                  <Label layoutX="62.0" layoutY="531.0" text="Sign Out" textFill="WHITE">
                      <font>
                         <Font name="Microsoft Sans Serif" size="18.0" />
                      </font>
                   </Label>
                </children>
             </AnchorPane>
-         </left>
-         <center>
-            <AnchorPane prefHeight="539.0" prefWidth="908.0" BorderPane.alignment="CENTER">
-               <children>
-                  <AnchorPane layoutX="16.0" layoutY="39.0" prefHeight="459.0" prefWidth="875.0" styleClass="bg-white" stylesheets="@../CSS/dashboardDesign.css" />
-               </children>
-            </AnchorPane>
-         </center>
-      </BorderPane>
+         </children>
+      </AnchorPane>
+      <Button fx:id="close" layoutX="722.0" layoutY="2.0" mnemonicParsing="false" onAction="#close" prefHeight="24.0" prefWidth="36.0" styleClass="close" stylesheets="@../CSS/dashboardDesign.css" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <graphic>
+            <FontAwesomeIcon glyphName="CLOSE" />
+         </graphic>
+      </Button>
+      <Button fx:id="minimize" layoutX="678.0" mnemonicParsing="false" onAction="#minimize" prefHeight="24.0" prefWidth="36.0" styleClass="minimize" stylesheets="@../CSS/dashboardDesign.css" AnchorPane.topAnchor="0.0">
+         <graphic>
+            <FontAwesomeIcon glyphName="MINUS" />
+         </graphic>
+      </Button>
+      <AnchorPane layoutX="287.0" layoutY="53.0" prefHeight="533.0" prefWidth="426.0" styleClass="bg-white" stylesheets="@../CSS/dashboardDesign.css">
+         <children>
+            <TableView layoutX="14.0" layoutY="14.0" prefHeight="355.0" prefWidth="398.0">
+              <columns>
+                <TableColumn prefWidth="75.0" text="C1" />
+                <TableColumn prefWidth="75.0" text="C2" />
+                  <TableColumn prefWidth="75.0" text="Column X" />
+                  <TableColumn prefWidth="75.0" text="Column X" />
+                  <TableColumn prefWidth="96.79996337890623" text="Column X" />
+              </columns>
+            </TableView>
+            <TextArea layoutX="31.0" layoutY="399.0" prefHeight="102.0" prefWidth="364.0" />
+         </children>
+      </AnchorPane>
+      <Label layoutX="341.0" layoutY="14.0" prefHeight="35.0" prefWidth="318.0" text="BlueMoon Apartment Management System">
+         <font>
+            <Font name="Segoe UI Symbol" size="16.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
