--- a/src/FXML/guixe.fxml
+++ b/src/FXML/guixe.fxml
@@ -2,28 +2,58 @@
 
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" fx:id="guixe_view" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.guixeController">
+<AnchorPane id="AnchorPane" fx:id="guixe_view" prefHeight="500.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.guixeController">
    <children>
-      <AnchorPane prefHeight="30.0" prefWidth="800.0">
+      <AnchorPane prefHeight="30.0" prefWidth="900.0">
          <children>
             <Button fx:id="back" layoutY="2.0" mnemonicParsing="false" onAction="#back" prefHeight="24.0" prefWidth="52.0" text="Back" AnchorPane.topAnchor="0.0" />
-            <Button fx:id="close" layoutX="748.0" mnemonicParsing="false" onAction="#close" prefHeight="24.0" prefWidth="52.0">
+            <Button fx:id="close" layoutX="848.0" mnemonicParsing="false" onAction="#close" prefHeight="24.0" prefWidth="52.0">
                <graphic>
                   <FontAwesomeIcon glyphName="CLOSE" />
                </graphic>
             </Button>
-            <Button fx:id="minimize" layoutX="696.0" mnemonicParsing="false" onAction="#minimize" prefHeight="24.0" prefWidth="52.0">
+            <Button fx:id="minimize" layoutX="796.0" mnemonicParsing="false" onAction="#minimize" prefHeight="24.0" prefWidth="52.0">
                <graphic>
                   <FontAwesomeIcon glyphName="MINUS" />
                </graphic>
             </Button>
          </children></AnchorPane>
-      <AnchorPane layoutX="24.0" layoutY="39.0" prefHeight="400.0" prefWidth="750.0" styleClass="bg-white" stylesheets="@../CSS/guixeDesign.css">
+      <AnchorPane layoutX="24.0" layoutY="39.0" prefHeight="400.0" prefWidth="854.0" styleClass="bg-white" stylesheets="@../CSS/guixeDesign.css">
          <children>
-            <Label layoutX="56.0" layoutY="47.0" text="Label" />
+            <Label layoutX="59.0" layoutY="38.0" text="ID:" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="40.0" />
+            <Label layoutX="50.0" layoutY="79.0" text="IDHộ:" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="80.0" />
+            <Label layoutX="66.0" layoutY="127.0" text="Họ và tên:" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="120.0" />
+            <Label layoutX="66.0" layoutY="174.0" text="Loại xe:" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="160.0" />
+            <Label layoutX="66.0" layoutY="216.0" text="Biển số xe:" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="200.0" />
+            <Label layoutX="66.0" layoutY="249.0" text="CCCD:" AnchorPane.leftAnchor="30.0" AnchorPane.topAnchor="240.0" />
+            <TextField fx:id="id" layoutX="102.0" layoutY="36.0" prefHeight="29.0" prefWidth="150.0" styleClass="add-textfield" stylesheets="@../CSS/guixeDesign.css" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="36.0" />
+            <TextField fx:id="idHo" layoutX="101.0" layoutY="76.0" prefHeight="29.0" prefWidth="150.0" styleClass="add-textfield" stylesheets="@../CSS/guixeDesign.css" AnchorPane.topAnchor="76.0" />
+            <TextField fx:id="name" layoutX="102.0" layoutY="116.0" prefHeight="29.0" prefWidth="150.0" styleClass="add-textfield" stylesheets="@../CSS/guixeDesign.css" AnchorPane.topAnchor="116.0" />
+            <TextField fx:id="carNumber" layoutX="101.0" layoutY="196.0" prefHeight="29.0" prefWidth="150.0" styleClass="add-textfield" stylesheets="@../CSS/guixeDesign.css" />
+            <TextField fx:id="CCCD" layoutX="101.0" layoutY="236.0" prefHeight="29.0" prefWidth="150.0" styleClass="add-textfield" stylesheets="@../CSS/guixeDesign.css" />
+            <TableView fx:id="table_view" layoutX="264.0" layoutY="31.0" onMouseClicked="#selectGuiXe" prefHeight="356.0" prefWidth="584.0">
+              <columns>
+                <TableColumn fx:id="col_id" prefWidth="68.0" text="ID" />
+                <TableColumn fx:id="col_idHo" prefWidth="72.0" text="ID Hộ" />
+                  <TableColumn fx:id="col_name" prefWidth="64.0" text="Họ và tên" />
+                  <TableColumn fx:id="col_kind" prefWidth="75.20004272460938" text="Loại xe" />
+                  <TableColumn fx:id="col_carNumber" prefWidth="68.0" text="Biển số xe" />
+                  <TableColumn fx:id="col_CCCD" prefWidth="54.39996337890625" text="CCCD" />
+                  <TableColumn fx:id="col_time" prefWidth="98.39996337890625" text="Ngày đk" />
+                  <TableColumn fx:id="col_idKT" prefWidth="82.4000244140625" text="MãKT" />
+              </columns>
+            </TableView>
+            <Button fx:id="register" layoutX="22.0" layoutY="300.0" mnemonicParsing="false" onAction="#register" styleClass="Btn-btn" stylesheets="@../CSS/guixeDesign.css" text="Đăng kí" />
+            <Button fx:id="clear" layoutX="108.0" layoutY="300.0" mnemonicParsing="false" onAction="#clear" styleClass="Btn-btn" stylesheets="@../CSS/guixeDesign.css" text="Clear" />
+            <Button fx:id="delete" layoutX="175.0" layoutY="300.0" mnemonicParsing="false" onAction="#delete" styleClass="Btn-btn" stylesheets="@../CSS/guixeDesign.css" text="Delete" />
+            <ChoiceBox fx:id="kind" layoutX="100.0" layoutY="156.0" prefWidth="150.0" styleClass="add-textfield" stylesheets="@../CSS/guixeDesign.css" />
          </children></AnchorPane>
    </children>
 </AnchorPane>
