--- a/src/FXML/nhankhau.fxml
+++ b/src/FXML/nhankhau.fxml
@@ -9,52 +9,52 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" fx:id="nhankhau_view" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.nhankhauController">
+<AnchorPane id="AnchorPane" fx:id="nhankhau_view" prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.nhankhauController">
    <children>
       <AnchorPane layoutX="21.0" layoutY="41.0" prefHeight="442.0" prefWidth="218.0" styleClass="bg-white" stylesheets="@../CSS/nhankhauDesign.css" AnchorPane.leftAnchor="21.0" AnchorPane.topAnchor="41.0">
          <children>
-            <Label layoutX="14.0" layoutY="28.0" prefHeight="18.0" prefWidth="54.0" text="ID:" AnchorPane.topAnchor="25.0" />
-            <Label layoutX="14.0" layoutY="87.0" text="Họ và tên:" AnchorPane.topAnchor="65.0" />
-            <Label layoutX="14.0" layoutY="110.0" prefHeight="18.0" prefWidth="54.0" text="Tuổi:" AnchorPane.topAnchor="105.0" />
-            <Label layoutX="14.0" layoutY="145.0" prefHeight="18.0" prefWidth="54.0" text="Giới tính:" AnchorPane.topAnchor="145.0" />
-            <Label layoutX="14.0" layoutY="173.0" prefHeight="18.0" prefWidth="54.0" text="CCCD:" AnchorPane.topAnchor="185.0" />
-            <TextField fx:id="id" layoutX="69.0" layoutY="20.0" prefHeight="26.0" prefWidth="130.0" styleClass="add-textfield" stylesheets="@../CSS/nhankhauDesign.css" />
-            <TextField fx:id="name" layoutX="69.0" layoutY="59.0" prefHeight="26.0" prefWidth="130.0" styleClass="add-textfield" stylesheets="@../CSS/nhankhauDesign.css" />
-            <TextField fx:id="age" layoutX="69.0" layoutY="100.0" prefHeight="26.0" prefWidth="130.0" styleClass="add-textfield" stylesheets="@../CSS/nhankhauDesign.css" />
-            <TextField fx:id="CCCD" layoutX="69.0" layoutY="180.0" prefHeight="26.0" prefWidth="130.0" styleClass="add-textfield" stylesheets="@../CSS/nhankhauDesign.css" AnchorPane.leftAnchor="69.0" AnchorPane.topAnchor="180.0" />
-            <ComboBox fx:id="gender" layoutX="69.0" layoutY="140.0" onAction="#comboBox" prefHeight="26.0" prefWidth="130.0" styleClass="add-textfield" stylesheets="@../CSS/nhankhauDesign.css" />
-            <Button fx:id="insert" layoutX="36.0" layoutY="282.0" mnemonicParsing="false" onAction="#insert" prefHeight="30.0" prefWidth="65.0" styleClass="insert-btn" stylesheets="@../CSS/nhankhauDesign.css" text="Insert" />
-            <Button fx:id="delete" layoutX="36.0" layoutY="326.0" mnemonicParsing="false" onAction="#delete" prefHeight="30.0" prefWidth="65.0" styleClass="delete-btn" stylesheets="@../CSS/nhankhauDesign.css" text="Delete" />
-            <Button fx:id="clear" layoutX="116.0" layoutY="326.0" mnemonicParsing="false" onAction="#clear" prefHeight="30.0" prefWidth="65.0" styleClass="clear-btn" stylesheets="@../CSS/nhankhauDesign.css" text="Clear" />
-            <Button fx:id="update" layoutX="116.0" layoutY="282.0" mnemonicParsing="false" onAction="#update" styleClass="update-btn" stylesheets="@../CSS/nhankhauDesign.css" text="Update" />
-            <Label layoutX="14.0" layoutY="225.0" prefHeight="18.0" prefWidth="54.0" text="IDHộ:" AnchorPane.topAnchor="225.0" />
-            <TextField fx:id="idHo" layoutX="71.0" layoutY="221.0" prefHeight="26.0" prefWidth="130.0" styleClass="add-textfield" stylesheets="@../CSS/nhankhauDesign.css" AnchorPane.leftAnchor="69.0" AnchorPane.topAnchor="220.0" />
+            <Label layoutX="16.0" layoutY="86.0" prefHeight="18.0" prefWidth="54.0" text="ID:" AnchorPane.topAnchor="86.0" />
+            <Label layoutX="16.0" layoutY="126.0" text="Họ và tên:" AnchorPane.topAnchor="126.0" />
+            <Label layoutX="16.0" layoutY="166.0" prefHeight="18.0" prefWidth="54.0" text="Tuổi:" AnchorPane.topAnchor="166.0" />
+            <Label layoutX="16.0" layoutY="206.0" prefHeight="18.0" prefWidth="54.0" text="Giới tính:" AnchorPane.topAnchor="206.0" />
+            <Label layoutX="16.0" layoutY="246.0" prefHeight="18.0" prefWidth="54.0" text="CCCD:" AnchorPane.topAnchor="246.0" />
+            <TextField fx:id="id" layoutX="71.0" layoutY="80.0" prefHeight="26.0" prefWidth="130.0" styleClass="add-textfield" stylesheets="@../CSS/nhankhauDesign.css" />
+            <TextField fx:id="name" layoutX="71.0" layoutY="119.0" prefHeight="26.0" prefWidth="130.0" styleClass="add-textfield" stylesheets="@../CSS/nhankhauDesign.css" />
+            <TextField fx:id="age" layoutX="71.0" layoutY="160.0" prefHeight="26.0" prefWidth="130.0" styleClass="add-textfield" stylesheets="@../CSS/nhankhauDesign.css" />
+            <TextField fx:id="CCCD" layoutX="71.0" layoutY="240.0" prefHeight="26.0" prefWidth="130.0" styleClass="add-textfield" stylesheets="@../CSS/nhankhauDesign.css" AnchorPane.leftAnchor="71.0" AnchorPane.topAnchor="240.0" />
+            <ComboBox fx:id="gender" layoutX="71.0" layoutY="200.0" onAction="#comboBox" prefHeight="26.0" prefWidth="130.0" styleClass="add-textfield" stylesheets="@../CSS/nhankhauDesign.css" />
+            <Button fx:id="delete" layoutX="38.0" layoutY="386.0" mnemonicParsing="false" onAction="#delete" prefHeight="30.0" prefWidth="65.0" styleClass="delete-btn" stylesheets="@../CSS/nhankhauDesign.css" text="Delete" />
+            <Button fx:id="clear" layoutX="118.0" layoutY="386.0" mnemonicParsing="false" onAction="#clear" prefHeight="30.0" prefWidth="65.0" styleClass="clear-btn" stylesheets="@../CSS/nhankhauDesign.css" text="Clear" />
+            <Button fx:id="update" layoutX="38.0" layoutY="339.0" mnemonicParsing="false" onAction="#update" styleClass="update-btn" stylesheets="@../CSS/nhankhauDesign.css" text="Update" />
+            <Label layoutX="16.0" layoutY="286.0" prefHeight="18.0" prefWidth="54.0" text="IDHộ:" AnchorPane.topAnchor="286.0" />
+            <TextField fx:id="idHo" layoutX="71.0" layoutY="280.0" prefHeight="26.0" prefWidth="130.0" styleClass="add-textfield" stylesheets="@../CSS/nhankhauDesign.css" AnchorPane.leftAnchor="71.0" AnchorPane.topAnchor="280.0" />
+            <TextField fx:id="search" layoutX="34.0" layoutY="21.0" onKeyTyped="#search" prefHeight="31.0" prefWidth="168.0" promptText="Search..." styleClass="search" stylesheets="@../CSS/nhankhauDesign.css" />
+            <FontAwesomeIcon glyphName="SEARCH" layoutX="9.0" layoutY="41.0" size="1.2em" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="255.0" layoutY="41.0" prefHeight="442.0" prefWidth="426.0" styleClass="bg-white" stylesheets="@../CSS/nhankhauDesign.css" AnchorPane.leftAnchor="255.0" AnchorPane.topAnchor="40.8">
+      <AnchorPane layoutX="255.0" layoutY="40.8" prefHeight="442.0" prefWidth="480.0" styleClass="bg-white" stylesheets="@../CSS/nhankhauDesign.css" AnchorPane.leftAnchor="255.0" AnchorPane.topAnchor="41.0">
          <children>
-            <TableView fx:id="table_view" layoutX="24.0" layoutY="45.0" onMouseClicked="#selectNhankhau" prefHeight="383.0" prefWidth="378.0" stylesheets="@../CSS/nhankhauDesign.css" AnchorPane.leftAnchor="24.0" AnchorPane.topAnchor="45.0">
+            <TableView fx:id="table_view" layoutX="8.0" layoutY="16.0" onMouseClicked="#selectNhankhau" prefHeight="410.0" prefWidth="463.0" stylesheets="@../CSS/nhankhauDesign.css" AnchorPane.leftAnchor="8.0" AnchorPane.topAnchor="16.0">
                <columns>
                   <TableColumn fx:id="col_id" prefWidth="38.39996337890625" text="ID" />
                   <TableColumn fx:id="col_name" prefWidth="80.80005264282227" text="Họ và tên" />
                   <TableColumn fx:id="col_age" prefWidth="42.4000244140625" text="Tuổi" />
-                  <TableColumn fx:id="col_gender" prefWidth="64.79998779296875" text="Giới tính" />
-                  <TableColumn fx:id="col_CCCD" prefWidth="95.19996643066406" text="CCCD" />
-                  <TableColumn fx:id="col_idHo" prefWidth="53.60001220703123" text="IDHo" />
+                  <TableColumn fx:id="col_gender" prefWidth="59.20001220703125" text="Giới tính" />
+                  <TableColumn fx:id="col_CCCD" prefWidth="79.99996948242188" text="CCCD" />
+                  <TableColumn fx:id="col_idHo" prefWidth="54.4000244140625" text="IDHo" />
+                  <TableColumn fx:id="col_updateTime" prefWidth="97.60003662109375" text="Thời gian đk" />
                </columns>
             </TableView>
-            <TextField fx:id="search" layoutX="54.0" layoutY="6.0" onKeyTyped="#search" prefHeight="31.0" prefWidth="168.0" promptText="Search..." styleClass="search" stylesheets="@../CSS/nhankhauDesign.css" />
-            <FontAwesomeIcon glyphName="SEARCH" layoutX="32.0" layoutY="24.0" size="1.2em" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutY="1.0" prefHeight="30.0" prefWidth="700.0">
+      <AnchorPane layoutY="1.0" prefHeight="30.0" prefWidth="750.0">
          <children>
-            <Button fx:id="exit" layoutX="648.0" layoutY="1.0" mnemonicParsing="false" onAction="#exit" prefHeight="24.0" prefWidth="52.0" AnchorPane.topAnchor="0.0">
+            <Button fx:id="exit" layoutX="698.0" mnemonicParsing="false" onAction="#exit" prefHeight="24.0" prefWidth="52.0" AnchorPane.topAnchor="0.0">
                <graphic>
                   <FontAwesomeIcon glyphName="CLOSE" />
                </graphic>
             </Button>
-            <Button fx:id="minimize" layoutX="596.0" layoutY="-1.0" mnemonicParsing="false" onAction="#minimize" prefHeight="24.0" prefWidth="52.0" AnchorPane.topAnchor="0.0">
+            <Button fx:id="minimize" layoutX="646.0" mnemonicParsing="false" onAction="#minimize" prefHeight="24.0" prefWidth="52.0" AnchorPane.topAnchor="0.0">
                <graphic>
                   <FontAwesomeIcon glyphName="MINUS" />
                </graphic>
