--- a/src/FXML/dashboard.fxml
+++ b/src/FXML/dashboard.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -57,16 +57,27 @@
       </Button>
       <AnchorPane layoutX="287.0" layoutY="53.0" prefHeight="533.0" prefWidth="426.0" styleClass="bg-white" stylesheets="@../CSS/dashboardDesign.css">
          <children>
-            <TableView layoutX="14.0" layoutY="14.0" prefHeight="355.0" prefWidth="398.0">
+            <TableView fx:id="table_view" layoutX="14.0" layoutY="47.0" prefHeight="322.0" prefWidth="398.0" stylesheets="@../CSS/nhankhauDesign.css">
               <columns>
-                <TableColumn prefWidth="75.0" text="C1" />
-                <TableColumn prefWidth="75.0" text="C2" />
-                  <TableColumn prefWidth="75.0" text="Column X" />
-                  <TableColumn prefWidth="75.0" text="Column X" />
-                  <TableColumn prefWidth="96.79996337890623" text="Column X" />
+                <TableColumn fx:id="idHo_col" prefWidth="75.0" text="Mã Hộ" />
+                <TableColumn fx:id="tienNop_col" prefWidth="95.20001220703125" text="Số tiền đã nộp" />
+                  <TableColumn fx:id="tienThieu_col" prefWidth="112.79998779296875" text="Số tiền còn thiếu" />
+                  <TableColumn fx:id="time_col" prefWidth="114.39996337890625" text="Thời gian nộp" />
               </columns>
             </TableView>
-            <TextArea layoutX="31.0" layoutY="399.0" prefHeight="102.0" prefWidth="364.0" />
+            <Label layoutX="161.0" layoutY="6.0" text="Thống kê">
+               <font>
+                  <Font name="Microsoft Sans Serif" size="25.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="395.0" text="Số tiền đã nhận:" />
+            <Label layoutX="30.0" layoutY="440.0" />
+            <TextField fx:id="idHo" layoutX="14.0" layoutY="422.0" onAction="#searchIdHo" prefHeight="26.0" prefWidth="61.0" promptText="Mã hộ:" />
+            <Label layoutX="133.0" layoutY="450.0" />
+            <TextField fx:id="soTienTungHo" layoutX="14.0" layoutY="459.0" promptText="Số tiền đã đóng" />
+            <Button fx:id="clear" layoutX="322.0" layoutY="382.0" mnemonicParsing="false" onAction="#clear" text="Clear" />
+            <Button layoutX="252.0" layoutY="382.0" mnemonicParsing="false" text="Show" />
+            <Label fx:id="totalAmount" layoutX="119.0" layoutY="395.0" text="000000" />
          </children>
       </AnchorPane>
       <Label layoutX="341.0" layoutY="14.0" prefHeight="35.0" prefWidth="318.0" text="BlueMoon Apartment Management System">
